Fixed boxes alignment, fixed pie graph size

--- a/open_ricostruzione/static/less/styles.less
+++ b/open_ricostruzione/static/less/styles.less
@@ -53,7 +53,7 @@ body{
   background-color: @navbar-color;
 
   #navbar-span{
-    margin-left: @spacing-half;
+//    margin-left: @spacing-half;
   }
 
   .navbar-custom{
@@ -76,7 +76,7 @@ body{
 
     height: 20px;
     padding-bottom: 5px;
-    margin-left: @spacing-half;
+//    margin-left: @spacing-half;
     padding-left: 5px;
     border-radius: 0;
     background-color: #cacccb;
@@ -173,10 +173,10 @@ div.content{
     margin-top: 5px;
   }
   #boxes-home{
-    margin-left: 200px;
+//    margin-left: 200px;
   }
   .boxes{
-    margin-left:0px;
+//    margin-left:0px;
 
     .title{
       color:black;
